page rank added

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0-rc.2",
     "natural": "^0.6.3",
     "request": "^2.88.0",
+    "sync-request": "^6.1.0",
     "url-parse": "^1.4.4"
   }
 }
